--- a/svetaine/Rankdarbiai/templates/home.html
+++ b/svetaine/Rankdarbiai/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="jumbotron">
-    <h1>Sveiki atvykę į mano svetainę!</h1>
+    <h1>Sveiki atvykę į  Rankdarbių Parduotuvė!</h1>
     <p>Esame didžiausia rankų darbo kūrinių rinkmena Lietuvoje.</p>
     <a href="{% url 'products' %}" class="btn btn-primary">Peržiūrėti kūrinius</a>
   </div>
