--- a/svetaine/Rankdarbiai/templates/base.html
+++ b/svetaine/Rankdarbiai/templates/base.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'home' %}">Mūsų Parduotuvė</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Mano Rankdarbių Parduotuvė</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'home' %}">Pagrindinis</a>
                 </li>
@@ -25,6 +25,20 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contact' %}">Kontaktai</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Produktai
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        {% for category in categories %}
+                            <a class="dropdown-item" href="{% url 'category_products' category.slug %}">{{ category.name }}</a>
+                        {% endfor %}
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'cart' %}">Krepšelis</a>
+                </li>
+                <!-- Čia pridėkite naujus meniu mygtukus -->
                 {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'user_profile' %}">Vartotojo Profilis</a>
@@ -40,9 +54,6 @@
                         <a class="nav-link" href="{% url 'register' %}">Registruotis</a>
                     </li>
                 {% endif %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'cart' %}">Krepšelis</a>
-                </li>
             </ul>
         </div>
     </nav>
