--- a/svetaine/Rankdarbiai/templates/about.html
+++ b/svetaine/Rankdarbiai/templates/about.html
@@ -1,13 +1,34 @@
 {% extends 'base.html' %}
 
-{% block title %}
-Apie Mus
-{% endblock %}
+{% block title %}Apie Mus{% endblock %}
 
 {% block content %}
-    <h1 class="mt-4">Apie Mus</h1>
-    <p>Mes esame internetinė platforma, kur žmonės gali parduoti ir pirkti unikalius rankų darbo produktus.</p>
-    <p>Mūsų svetainėje rasite plačią asortimentą prekių, kurias sukūrė talentingi amatininkai iš viso pasaulio.</p>
-    <p>Siekiant palaikyti kūrybinę bendruomenę, teikiame galimybę rodyti unikalius produktus ir rasti pirkėjus, kurie vertina rankų darbą.</p>
-    <p>Jeigu turite klausimų ar pasiūlymų, prašome susisiekti su mumis per kontaktų puslapį.</p>
+    <div class="container">
+        <h1 class="mt-4 mb-3">Apie Mus</h1>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <img src="https://www.tevu-darzelis.lt/Files/image/Zaislu%20kolekcija%20is%20tualetinio%20ritineliu.jpg" alt="Paveikslėlio aprašymas 1" class="img-fluid">
+                <p>Iš tualetinio popieriaus ritinėlių galima pasigaminti įvairius žvėrelius, paukščius, vabaliukus, o gal užteks fantazijos net įkūnyti mėgstamo filmuko veikėją?</p>
+            </div>
+            <div class="col-lg-6">
+                <img src="https://www.tevu-darzelis.lt/Files/image/Piestukine%20is%20tualetinio%20ritineliu.jpg" alt="Paveikslėlio aprašymas 2" class="img-fluid">
+                <p>Jei pabodo po visus namus išmėtyti flomasteriai, pieštukai, kreidelės, trintukai ir kitos kanceliarinės priemonės, pats metas įvesti tvarką ir su vaikais pasigaminti pieštukinę.</p>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-lg-6">
+                <img src="https://www.tevu-darzelis.lt/Files/image/Nameliais%20is%20tualetinio%20popieriaus%20ritineliu.jpg" alt="Paveikslėlio aprašymas 3" class="img-fluid">
+                <p>Jei vaikas turi gausybę smulkių žaislų, jiems būtinai reikia namų! Juos nesunkiai pasigaminsite iš tualetinio popieriaus ar popierinių rankšluosčių ritinėlių. Nameliai bus kur kas žaismingesni, jei nuspalvinsite juos skirtingų spalvų dažais. Nepamirškite priklijuoti stogo, durų ir langų. Beje, durelės ir langai gali varstytis – juos galite išpjauti specialiu peiliuku-rėžtuku. Nameliai gali būti ir kelių aukštų: tokiu atveju ritinėlio viduryje, vidinėje pusėje reikės įklijuoti skrituliuką.</p>
+            </div>
+            <div class="col-lg-6">
+                <img src="https://www.tevu-darzelis.lt/Files/image/Dekoracijos%20is%20tualetinio%20ritineliu.jpg" alt="Paveikslėlio aprašymas 4" class="img-fluid">
+                <p>Puikią vaikų kambario puošmeną sukursite apklijavę tualetinio popieriaus rulonėlius spalvotais popieriniais „žvyneliais“. Vėlgi dekoraciją galima paversti „gyva“: priklijuoti jai akis. Ypač ją papuošiantis elementas – iš ilgų spalvotų krepinio popieriaus juostelių pagaminta uodega.</p>
+            </div>
+        </div>
+
+        <!-- Įtraukite daugiau paveikslėlių ir aprašymų pagal poreikį -->
+
+    </div>
 {% endblock %}
