--- a/svetaine/Rankdarbiai/templates/base.html
+++ b/svetaine/Rankdarbiai/templates/base.html
@@ -59,7 +59,8 @@
     </nav>
 
     <div class="container mt-4">
-        {% block content %}{% endblock %}
+        {% block content %}
+        {% endblock %}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -68,4 +69,6 @@
     <!-- Įkeliame JavaScript iš Bootstrap -->
 </body>
 </html>
+
+
 
