--- a/svetaine/Rankdarbiai/templates/base.html
+++ b/svetaine/Rankdarbiai/templates/base.html
@@ -31,7 +31,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         {% for category in categories %}
-                            <a class="dropdown-item" href="{% url 'category_products' category.slug %}">{{ category.name }}</a>
+                            <a class="dropdown-item" href="{% url 'category_products' category.id %}">{{ category.name }}</a>
                         {% endfor %}
                     </div>
                 </li>
