--- a/svetaine/Rankdarbiai/templates/user_profile.html
+++ b/svetaine/Rankdarbiai/templates/user_profile.html
@@ -4,10 +4,12 @@
 
 {% block content %}
     <h1 class="mt-4">Vartotojo Profilis</h1>
-    <h3>Vardas: Jonas</h3>
-    <p>El. paštas: jonas@example.com</p>
-    <p>Adresas: Vilnius, Lietuva</p>
-    <p>Telefono numeris: +370 123 45678</p>
-    <p>Paskutinis prisijungimas: 2023-06-08 14:30</p>
-    <a href="#" class="btn btn-primary">Redaguoti Profilį</a>
+    <h3>Vardas: {{ user.username }}</h3>
+    <p>El. paštas: {{ user.email }}</p>
+    <p>Adresas: {{ user.userprofile.location }}</p>
+    <p>Telefono numeris: {{ user.userprofile.phone_number }}</p>
+    <p>Paskutinis prisijungimas: {{ user.last_login }}</p>
+    <a href="{% url 'edit_profile' %}" class="btn btn-primary">Redaguoti Profilį</a>
+    <a href="{% url 'add_product' %}" class="btn btn-primary">Įkelti Prekę</a>
 {% endblock %}
+
