--- a/svetaine/Rankdarbiai/templates/payment_success.html
+++ b/svetaine/Rankdarbiai/templates/payment_success.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
+{% block title %}Mokėjimas sėkmingas{% endblock %}
+
 {% block content %}
     <div class="container">
         <h1 class="mt-4 mb-3">Mokėjimas sėkmingas!</h1>
 
-        <p>Dėkojame, kad atlikote mokėjimą.</p>
+        <p>Dėkojame, kad atlikote fiktyvų mokėjimą.</p>
     </div>
 {% endblock %}
+
