--- a/svetaine/Rankdarbiai/templates/login.html
+++ b/svetaine/Rankdarbiai/templates/login.html
@@ -1,18 +1,26 @@
 {% extends 'base.html' %}
 
-{% block title %}Prisijungimas{% endblock %}
-
 {% block content %}
-    <h1 class="mt-4">Prisijungimas</h1>
-    <form>
-        <div class="form-group">
-            <label for="username">Vartotojo vardas</label>
-            <input type="text" class="form-control" id="username" placeholder="Įveskite vartotojo vardą">
-        </div>
-        <div class="form-group">
-            <label for="password">Slaptažodis</label>
-            <input type="password" class="form-control" id="password" placeholder="Įveskite slaptažodį">
-        </div>
-        <button type="submit" class="btn btn-primary">Prisijungti</button>
-    </form>
+<main class="form-signin">
+  <form>
+    <h1 class="h3 mb-3 fw-normal">Prisijungimas</h1>
+
+    <div class="form-floating">
+      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <label for="floatingInput">El. pašto adresas</label>
+    </div>
+    <div class="form-floating">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Slaptažodis">
+      <label for="floatingPassword">Slaptažodis</label>
+    </div>
+
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Prisiminti mane
+      </label>
+    </div>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Prisijungti</button>
+  </form>
+</main>
 {% endblock %}
+
