reikia_pataisyti_cart_ir_home

--- a/svetaine/Rankdarbiai/templates/about.html
+++ b/svetaine/Rankdarbiai/templates/about.html
@@ -5,30 +5,17 @@
 {% block content %}
     <div class="container">
         <h1 class="mt-4 mb-3">Apie Mus</h1>
+        <p>Sveiki atvykę į mūsų svetainę, kurioje galite prekiauti savo rankdarbiais. Mes siūlome platformą, kurioje kūrėjai gali dalintis ir parduoti savo unikalius rankdarbius. Nuo paprastų, bet stilingų rankdarbių iki unikalių meno kūrinių - čia galite rasti viską. Prisijunkite prie mūsų bendruomenės ir pradėkite prekiauti savo rankdarbiais!</p>
 
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-lg-6">
-                <img src="https://www.tevu-darzelis.lt/Files/image/Zaislu%20kolekcija%20is%20tualetinio%20ritineliu.jpg" alt="Paveikslėlio aprašymas 1" class="img-fluid">
-                <p>Iš tualetinio popieriaus ritinėlių galima pasigaminti įvairius žvėrelius, paukščius, vabaliukus, o gal užteks fantazijos net įkūnyti mėgstamo filmuko veikėją?</p>
+                <img src="https://i.pinimg.com/originals/e7/49/ca/e749ca2ad170a26247b116fd8c242837.jpg" alt="Rankdarbių nuotrauka 1" class="img-fluid">
+                <p>Čia yra vienas iš nuostabių rankdarbių, kuriuos galite rasti mūsų svetainėje. Šis kūrėjas pasitelkė savo kūrybą ir meistriškumą, kad sukurtų šį stilingą daiktą!</p>
             </div>
             <div class="col-lg-6">
-                <img src="https://www.tevu-darzelis.lt/Files/image/Piestukine%20is%20tualetinio%20ritineliu.jpg" alt="Paveikslėlio aprašymas 2" class="img-fluid">
-                <p>Jei pabodo po visus namus išmėtyti flomasteriai, pieštukai, kreidelės, trintukai ir kitos kanceliarinės priemonės, pats metas įvesti tvarką ir su vaikais pasigaminti pieštukinę.</p>
-            </div>
-        </div>
-
-        <div class="row mt-4">
-            <div class="col-lg-6">
-                <img src="https://www.tevu-darzelis.lt/Files/image/Nameliais%20is%20tualetinio%20popieriaus%20ritineliu.jpg" alt="Paveikslėlio aprašymas 3" class="img-fluid">
-                <p>Jei vaikas turi gausybę smulkių žaislų, jiems būtinai reikia namų! Juos nesunkiai pasigaminsite iš tualetinio popieriaus ar popierinių rankšluosčių ritinėlių. Nameliai bus kur kas žaismingesni, jei nuspalvinsite juos skirtingų spalvų dažais. Nepamirškite priklijuoti stogo, durų ir langų. Beje, durelės ir langai gali varstytis – juos galite išpjauti specialiu peiliuku-rėžtuku. Nameliai gali būti ir kelių aukštų: tokiu atveju ritinėlio viduryje, vidinėje pusėje reikės įklijuoti skrituliuką.</p>
-            </div>
-            <div class="col-lg-6">
-                <img src="https://www.tevu-darzelis.lt/Files/image/Dekoracijos%20is%20tualetinio%20ritineliu.jpg" alt="Paveikslėlio aprašymas 4" class="img-fluid">
-                <p>Puikią vaikų kambario puošmeną sukursite apklijavę tualetinio popieriaus rulonėlius spalvotais popieriniais „žvyneliais“. Vėlgi dekoraciją galima paversti „gyva“: priklijuoti jai akis. Ypač ją papuošiantis elementas – iš ilgų spalvotų krepinio popieriaus juostelių pagaminta uodega.</p>
+                <img src="https://img.buzzfeed.com/buzzfeed-static/static/2014-02/enhanced/webdr08/28/17/enhanced-buzz-2078-1393627656-13.jpg?downsize=600:*&output-format=auto&output-quality=auto" alt="Rankdarbių nuotrauka 2" class="img-fluid">
+                <p>Stebiname savo lankytojus unikaliais rankdarbiais, tokius kaip šis. Tai yra dar vienas puikus pavyzdys, kaip mūsų kūrėjai naudoja savo talentą ir kūrybiškumą, kad sukurtų nuostabius daiktus.</p>
             </div>
         </div>
-
-        <!-- Įtraukite daugiau paveikslėlių ir aprašymų pagal poreikį -->
-
     </div>
 {% endblock %}
