--- a/svetaine/Rankdarbiai/templates/checkout.html
+++ b/svetaine/Rankdarbiai/templates/checkout.html
@@ -6,9 +6,7 @@
 <div class="container">
   <main>
     <div class="py-5 text-center">
-      <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-      <h2>Atsiskaitymo forma</h2>
-      <p class="lead">Žemiau pateikta forma yra Bootstrap formų pavyzdys. Kiekvienai privalomai formos grupei priskirtas tikrinimo būsena, kurią galima iškviesti, bandant pateikti formą nepilną.</p>
+      <h2>Iveskite apmokėjimo ir pristatymo duomenis</h2>
     </div>
 
     <div class="row g-5">
