--- a/svetaine/Rankdarbiai/templates/contact.html
+++ b/svetaine/Rankdarbiai/templates/contact.html
@@ -18,7 +18,7 @@
             <label for="message">Žinutė</label>
             <textarea class="form-control" id="message" rows="5" placeholder="Įveskite savo žinutę"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Siųsti</button>
+        <button type="submit" class="btn btn-success">Siųsti</button>
     </form>
     <hr>
     <p>Papildomi kontaktiniai duomenys:</p>
@@ -27,4 +27,9 @@
         <li>El. paštas: info@example.com</li>
         <li>Adresas: 123 gatvė, Vilnius, Lietuva</li>
     </ul>
+    <hr>
+    <h2>Mūsų adresas</h2>
+    <div class="map-responsive">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2304.2186548910184!2d25.279651315497196!3d54.68704597827677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dd94674a5db6ad%3A0x400cfcd68f2fe30!2sVilnius!5e0!3m2!1sen!2slt!4v1431512794796" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 {% endblock %}
