--- a/svetaine/Rankdarbiai/templates/base.html
+++ b/svetaine/Rankdarbiai/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="lt" data-bs-theme="auto">
 <head>
@@ -5,55 +7,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Mūsų Parduotuvė{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <!-- Įkeliame stilius iš Bootstrap -->
+    <style>
+        .navbar {
+            background-color: #FFD966;
+        }
+        .navbar-nav {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+        .nav-link-color {
+            color: black;
+        }
+        .main-menu {
+            display: flex;
+            justify-content: center;
+            flex-grow: 1;
+        }
+        .nav-icon {
+            width: 24px;
+            height: 24px;
+        }
+        .navbar-nav > div {
+            display: flex;
+            justify-content: center;
+        }
+        .navbar-nav > div:last-child {
+            justify-content: flex-end;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'home' %}">Mano Rankdarbių Parduotuvė</a>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="{% url 'home' %}" style="font-weight: bold; color: black; font-size: 24px;">🆁🅳 🅿🅰🆁🅳🆄🅾🆃🆄🆅🅴</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home' %}">Pagrindinis</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">Apie Mus</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact' %}">Kontaktai</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Produktai
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        {% for category in categories %}
-                            <a class="dropdown-item" href="{% url 'category_products' category.id %}">{{ category.name }}</a>
-                        {% endfor %}
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'cart' %}">Krepšelis</a>
-                </li>
-                <!-- Čia pridėkite naujus meniu mygtukus -->
-                {% if user.is_authenticated %}
+                <div>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user_profile' %}">Vartotojo Profilis</a>
+                        <a class="nav-link" href="{% url 'home' %}" style="font-weight: bold; color: black; font-size: 24px;">Pagrindinis</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Atsijungti</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Prisijungti</a>
+                        <a class="nav-link" href="{% url 'about' %}" style="font-weight: bold; color: black; font-size: 24px;">Apie Mus</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Registruotis</a>
+                        <a class="nav-link" href="{% url 'products' %}" style="font-weight: bold; color: black; font-size: 24px;">Prekes</a>
                     </li>
-                {% endif %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight: bold; color: black; font-size: 24px;">
+                            Kategorijos
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% for category in categories %}
+                                <a class="dropdown-item" href="{% url 'category_products' category.id %}">{{ category.name }}</a>
+                            {% endfor %}
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}" style="font-weight: bold; color: black; font-size: 24px;">Kontaktai</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'help' %}" style="font-weight: bold; color: black; font-size: 24px;">Pagalba</a>
+                    </li>
+                </div>
+                <div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cart' %}">
+                            <img src="{% static 'cart_icon.png' %}" alt="Krepšelis" class="nav-icon" style="font-weight: bold; color: black; width: 50px; height:50px;">
+                        </a>
+                    </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'user_profile' %}">
+                                <img src="{% static 'user_icon.png' %}" alt="Vartotojo Profilis" class="nav-icon" style="font-weight: bold; color: black; width: 40px; height:40px;">
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}" style="font-weight: bold; color: black; font-size: 24px;">Atsijungti</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}" style="font-weight: bold; color: black; font-size: 24px;">Prisijungti</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}" style="font-weight: bold; color: black; font-size: 24px;">Registruotis</a>
+                        </li>
+
+                    {% endif %}
+                </div>
             </ul>
         </div>
     </nav>
@@ -66,9 +110,11 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <!-- Įkeliame JavaScript iš Bootstrap -->
 </body>
 </html>
+
+
+
 
 
 
