--- a/svetaine/Rankdarbiai/templates/category_products.html
+++ b/svetaine/Rankdarbiai/templates/category_products.html
@@ -6,16 +6,21 @@
     <h1 class="mt-4">Produktai kategorijoje - {{ category.name }}</h1>
 
     {% if products %}
-        <ul>
+        <div class="row">
             {% for product in products %}
-                <li>
-                    <h3>{{ product.title }}</h3>
-                    <p>Kaina: {{ product.price }}</p>
-                    <p>Aprašymas: {{ product.description }}</p>
-                    <img src="{{ product.image.url }}" alt="{{ product.title }}">
-                </li>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <a href="{% url 'product_detail' product.id %}">
+                            <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ product.title }}</h5>
+                                <p class="card-text">Kaina: {{ product.price }} EUR</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             {% endfor %}
-        </ul>
+        </div>
     {% else %}
         <p>Šioje kategorijoje nėra produktų.</p>
     {% endif %}
