--- a/svetaine/Rankdarbiai/templates/product_detail.html
+++ b/svetaine/Rankdarbiai/templates/product_detail.html
@@ -5,14 +5,13 @@
 {% block content %}
     <div class="card">
         <div class="card-header">
-            <h5 class="card-title">Produkto Pavadinimas</h5>
+            <h5 class="card-title">{{ product.title }}</h5>
         </div>
         <div class="card-body">
-            <p>Šis unikalus produktas yra rankų darbo kūrinys, sukurtas su meile ir rūpesčiu.</p>
-            <p>Pasirinkite šį produktą, jei ieškote aukštos kokybės ir išskirtinio dizaino.</p>
-            <p>Kaina: €50</p>
-            <p>Turimas kiekis: 10 vnt.</p>
-            <button class="btn btn-primary">Pirkti</button>
+            <p>{{ product.description }}</p>
+            <p>Kaina: {{ product.price }} EUR</p>
+            <p>Turimas kiekis: {{ product.quantity }} vnt.</p>
+            <a href="{% url 'add_to_cart' product.id %}" class="btn btn-primary">Įdėti į krepšelį</a>
         </div>
     </div>
 {% endblock %}
