--- a/svetaine/Rankdarbiai/templates/products.html
+++ b/svetaine/Rankdarbiai/templates/products.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Produktai{% endblock %}
+
 {% block content %}
   <h1>Mūsų kūriniai</h1>
 
@@ -7,15 +9,18 @@
     {% for product in products %}
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}">
-          <div class="card-body">
-            <h5 class="card-title">{{ product.title }}</h5>
-            <p class="card-text">{{ product.description }}</p>
-            <p class="card-text">Kaina: {{ product.price }} EUR</p>
-            <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">Detaliau</a>
-          </div>
+          <a href="{% url 'product_detail' product.id %}">
+            <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}">
+            <div class="card-body">
+              <h5 class="card-title">{{ product.title }}</h5>
+              <p class="card-text">{{ product.description }}</p>
+              <p class="card-text">Kaina: {{ product.price }} EUR</p>
+            </div>
+          </a>
         </div>
       </div>
     {% endfor %}
   </div>
 {% endblock %}
+
+
