--- a/svetaine/Rankdarbiai/templates/register.html
+++ b/svetaine/Rankdarbiai/templates/register.html
@@ -4,23 +4,25 @@
 
 {% block content %}
     <h1 class="mt-4">Registracija</h1>
-    <form>
+    <form method="post">
+        {% csrf_token %}
         <div class="form-group">
             <label for="username">Vartotojo vardas</label>
-            <input type="text" class="form-control" id="username" placeholder="Įveskite vartotojo vardą">
+            <input type="text" class="form-control" id="username" name="username" placeholder="Įveskite vartotojo vardą" required>
         </div>
         <div class="form-group">
             <label for="email">El. paštas</label>
-            <input type="email" class="form-control" id="email" placeholder="Įveskite el. paštą">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Įveskite el. paštą" required>
         </div>
         <div class="form-group">
             <label for="password">Slaptažodis</label>
-            <input type="password" class="form-control" id="password" placeholder="Įveskite slaptažodį">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Įveskite slaptažodį" required>
         </div>
         <div class="form-group">
             <label for="confirm-password">Patvirtinti slaptažodį</label>
-            <input type="password" class="form-control" id="confirm-password" placeholder="Patvirtinkite slaptažodį">
+            <input type="password" class="form-control" id="confirm-password" name="confirm_password" placeholder="Patvirtinkite slaptažodį" required>
         </div>
         <button type="submit" class="btn btn-primary">Registruotis</button>
     </form>
 {% endblock %}
+
