--- a/svetaine/Rankdarbiai/templates/help.html
+++ b/svetaine/Rankdarbiai/templates/help.html
@@ -2,6 +2,7 @@
 
 {% block title %}Pagalba{% endblock %}
 
+
 {% block content %}
     <div class="container">
         <div class="row">
@@ -38,8 +39,8 @@
         </div>
     </div>
 
-    <div class="text-center">
-        <img src="/static/help_image.jpg" alt="Pagalba" style="width: 400px; height: auto;">
+    <div class="text-left" style="margin-top: -120px;">
+        <img src="/static/help_image.jpg" alt="Pagalba" style="width: 555px; height: 425px;">
     </div>
 {% endblock %}
 
