--- a/svetaine/Rankdarbiai/templates/product_detail.html
+++ b/svetaine/Rankdarbiai/templates/product_detail.html
@@ -3,7 +3,7 @@
 {% block title %}Produkto Informacija{% endblock %}
 
 {% block content %}
-    <div class="card">
+    <div class="card" style="background-color: #FFD966;">
         <div class="card-header">
             <h5 class="card-title">{{ product.title }}</h5>
         </div>
