--- a/svetaine/Rankdarbiai/templates/base.html
+++ b/svetaine/Rankdarbiai/templates/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %}Mūsų Parduotuvė{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <style>
+
         .navbar {
             background-color: #FFD966;
         }
@@ -110,6 +111,11 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<style>
+    body {
+        background-color: #FFD966;  /* keicia puslapi ospalva */
+        }
+</style>
 </body>
 </html>
 
