--- a/svetaine/Rankdarbiai/templates/home.html
+++ b/svetaine/Rankdarbiai/templates/home.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="jumbotron">
-    <img src="/static/imageonline-co-textimage.jpg" alt="Paveikslėlis" class="nav-icon" style="width: 1050px; height:650px;">
+  <div class="jumbotron" style="background-color: #FFD966;">
+    <img src="/static/imageonline-co-textimage.jpg" alt="Paveikslėlis" class="nav-icon" style="width: 1050px; height:650px;" >
     <h1>Sveiki atvykę į Rankdarbių Parduotuvę!</h1>
     <p>Esame didžiausia rankų darbo kūrinių rinkmena Lietuvoje.</p>
     <a href="{% url 'products' %}" class="btn btn-primary">Peržiūrėti kūrinius</a>
   </div>
 
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6" >
       <h2>Kodėl rinktis rankų darbo kūrinius?</h2>
       <p>Rankų darbo kūriniai yra unikalūs, sukuriami su meile ir dėmesiu smulkmenoms. Jie atspindi meistriškumą ir kūrėjo asmenybę.</p>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6" >
       <h2>Mūsų paslaugos</h2>
       <ul>
         <li>Platus rankų darbo kūrinių pasirinkimas</li>
@@ -30,22 +30,22 @@
         <div class="carousel-inner">
           {% for product in latest_products %}
             <div class="carousel-item {% if forloop.first %}active{% endif %}">
-              <div class="card">
+              <div class="card" style="background-color: #FFD966;">
                 <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}">
                 <div class="card-body">
                 </div>
-                <div class="card-footer">
+                <div class="card-footer d-flex justify-content-center">
                   <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">Detaliau</a>
                 </div>
               </div>
             </div>
           {% endfor %}
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" style="color: black;">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" style="color: black;">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
@@ -53,5 +53,6 @@
     </div>
   </div>
 {% endblock %}
+
 
 
