--- a/svetaine/Rankdarbiai/templates/products.html
+++ b/svetaine/Rankdarbiai/templates/products.html
@@ -8,10 +8,10 @@
   <div class="row">
     {% for product in products %}
       <div class="col-md-4">
-        <div class="card mb-4">
+        <div class="card mb-4" style="background-color: #FFD966;">
           <a href="{% url 'product_detail' product.id %}">
             <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}">
-            <div class="card-body">
+            <div class="card-body" style="color: #000000;">
               <h5 class="card-title">{{ product.title }}</h5>
               <p class="card-text">{{ product.description }}</p>
               <p class="card-text">Kaina: {{ product.price }} EUR</p>
@@ -22,5 +22,7 @@
     {% endfor %}
   </div>
 {% endblock %}
+
+
 
 
